--- a/index.html
+++ b/index.html
@@ -7,43 +7,54 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive rating component</title>
-
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Rating state start -->
 
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
+  <article class="main-card">
+    <img src="images/icon-star.svg" class="star-icon">
+    <h1>How did we do?</h1>
+    <p>
+      Please let us know how we did with your support request. All feedback is appreciated
+      to help us improve our offering!
+    </p>
+    <ul>
+      <li><button class="num-btn">1</button></li>
+      <li><button class="num-btn">2</button></li>
+      <li><button class="num-btn">3</button></li>
+      <li><button class="num-btn">4</button></li>
+      <li><button class="num-btn">5</button></li>
+    </ul>
+    <div class="error">Please Rate Us</div>
+    <button class="btn-submit">Submit</button>
+  </article>
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+  <article class="thankyou-card">
+    <div><img src="images/illustration-thank-you.svg" alt="" srcset=""></div>
+    <h2>You selected <span id="ratNum"></span> out of 5</h2>
+    <h1>Thank you!</h1>
+    <p>
+      We appreciate you taking the time to give a rating. If you ever need more support,
+      don’t hesitate to get in touch!
+    </p>
+  </article>
 
   <!-- Thank you state end -->
 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/smarko-web" target="_blank">Marko</a>.
   </div>
 </body>
+<script src="script.js"></script>
 </html>
