--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       Please let us know how we did with your support request. All feedback is appreciated
       to help us improve our offering!
     </p>
-    <ul>
+    <!-- <ul>
       <li><button class="num-btn">1</button></li>
       <li><button class="num-btn">2</button></li>
       <li><button class="num-btn">3</button></li>
@@ -31,7 +31,23 @@
       <li><button class="num-btn">5</button></li>
     </ul>
     <div class="error">Please Rate Us</div>
-    <button class="btn-submit">Submit</button>
+    <button class="btn-submit">Submit</button> -->
+    <form action="#">
+      <div>
+        <input type="radio" name="rate" id="1" value="1">
+        <label for="1">1</label>
+        <input type="radio" name="rate" id="2" value="2">
+        <label for="2" class="">2</label>
+        <input type="radio" name="rate" id="3" value="3">
+        <label for="3" class="">3</label>
+        <input type="radio" name="rate" id="4" value="4">
+        <label for="4" class="">4</label>
+        <input type="radio" name="rate" id="5" value="5">
+        <label for="5" class="">5</label>
+      </div>
+      <div class="error">Please Rate Us</div>
+      <button class="btn-submit">Submit</button>
+    </form>
   </article>
 
   <!-- Rating state end -->
