used form to redo first commit, to submit solution

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Rating state start -->
 
   <article class="main-card">
-    <img src="images/icon-star.svg" class="star-icon">
+    <div><img src="images/icon-star.svg" class="star-icon"></div>
     <h1>How did we do?</h1>
     <p>
       Please let us know how we did with your support request. All feedback is appreciated
@@ -55,8 +55,10 @@
   <!-- Thank you state start -->
 
   <article class="thankyou-card">
-    <div><img src="images/illustration-thank-you.svg" alt="" srcset=""></div>
-    <h2>You selected <span id="ratNum"></span> out of 5</h2>
+      <img src="images/illustration-thank-you.svg" alt="" srcset="">
+    <div>
+      <h2>You selected <span id="ratNum">5</span> out of 5</h2>
+    </div>
     <h1>Thank you!</h1>
     <p>
       We appreciate you taking the time to give a rating. If you ever need more support,
@@ -72,5 +74,5 @@
     Coded by <a href="https://www.frontendmentor.io/profile/smarko-web" target="_blank">Marko</a>.
   </div>
 </body>
-<script src="script.js"></script>
+<script src="form.js"></script>
 </html>
