--- a/index.html
+++ b/index.html
@@ -13,66 +13,70 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Rating state start -->
-
-  <article class="main-card">
-    <div><img src="images/icon-star.svg" class="star-icon"></div>
-    <h1>How did we do?</h1>
-    <p>
-      Please let us know how we did with your support request. All feedback is appreciated
-      to help us improve our offering!
-    </p>
-    <!-- <ul>
-      <li><button class="num-btn">1</button></li>
-      <li><button class="num-btn">2</button></li>
-      <li><button class="num-btn">3</button></li>
-      <li><button class="num-btn">4</button></li>
-      <li><button class="num-btn">5</button></li>
-    </ul>
-    <div class="error">Please Rate Us</div>
-    <button class="btn-submit">Submit</button> -->
-    <form action="#">
-      <div>
-        <input type="radio" name="rate" id="1" value="1">
-        <label for="1">1</label>
-        <input type="radio" name="rate" id="2" value="2">
-        <label for="2" class="">2</label>
-        <input type="radio" name="rate" id="3" value="3">
-        <label for="3" class="">3</label>
-        <input type="radio" name="rate" id="4" value="4">
-        <label for="4" class="">4</label>
-        <input type="radio" name="rate" id="5" value="5">
-        <label for="5" class="">5</label>
-      </div>
+<main>
+  
+    <!-- Rating state start -->
+  
+    <div class="main-card">
+      <div><img src="images/icon-star.svg" class="star-icon"></div>
+      <h1>How did we do?</h1>
+      <p>
+        Please let us know how we did with your support request. All feedback is appreciated
+        to help us improve our offering!
+      </p>
+      <!-- <ul>
+        <li><button class="num-btn">1</button></li>
+        <li><button class="num-btn">2</button></li>
+        <li><button class="num-btn">3</button></li>
+        <li><button class="num-btn">4</button></li>
+        <li><button class="num-btn">5</button></li>
+      </ul>
       <div class="error">Please Rate Us</div>
-      <button class="btn-submit">Submit</button>
-    </form>
-  </article>
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  <article class="thankyou-card">
-      <img src="images/illustration-thank-you.svg" alt="" srcset="">
-    <div>
-      <h2>You selected <span id="ratNum">5</span> out of 5</h2>
+      <button class="btn-submit">Submit</button> -->
+      <form action="#">
+        <div>
+          <input type="radio" name="rate" id="1" value="1">
+          <label for="1">1</label>
+          <input type="radio" name="rate" id="2" value="2">
+          <label for="2" class="">2</label>
+          <input type="radio" name="rate" id="3" value="3">
+          <label for="3" class="">3</label>
+          <input type="radio" name="rate" id="4" value="4">
+          <label for="4" class="">4</label>
+          <input type="radio" name="rate" id="5" value="5">
+          <label for="5" class="">5</label>
+        </div>
+        <div class="error">Please Rate Us</div>
+        <button class="btn-submit">Submit</button>
+      </form>
     </div>
-    <h1>Thank you!</h1>
-    <p>
-      We appreciate you taking the time to give a rating. If you ever need more support,
-      don’t hesitate to get in touch!
-    </p>
-  </article>
-
-  <!-- Thank you state end -->
+  
+    <!-- Rating state end -->
+  
+    <!-- Thank you state start -->
+  
+    <div class="thankyou-card">
+        <img src="images/illustration-thank-you.svg" alt="" srcset="">
+      <div>
+        <h2>You selected <span id="ratNum"></span> out of 5</h2>
+      </div>
+      <h1>Thank you!</h1>
+      <p>
+        We appreciate you taking the time to give a rating. If you ever need more support,
+        don’t hesitate to get in touch!
+      </p>
+    </div>
+  
+    <!-- Thank you state end -->
+</main>
 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/smarko-web" target="_blank">Marko</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/smarko-web" target="_blank">Marko</a>.
+    </div>
+  </footer>
 </body>
 <script src="form.js"></script>
 </html>
