--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Rating state start -->
   
     <div class="main-card">
-      <div><img src="images/icon-star.svg" class="star-icon"></div>
+      <div><img src="images/icon-star.svg" class="star-icon" alt="star-icon"></div>
       <h1>How did we do?</h1>
       <p>
         Please let us know how we did with your support request. All feedback is appreciated
@@ -35,15 +35,15 @@
       <button class="btn-submit">Submit</button> -->
       <form action="#">
         <div>
-          <input type="radio" name="rate" id="1" value="1">
+          <input type="radio" name="rate" id="1" value="1" aria-label="1">
           <label for="1">1</label>
-          <input type="radio" name="rate" id="2" value="2">
+          <input type="radio" name="rate" id="2" value="2" aria-label="2">
           <label for="2" class="">2</label>
-          <input type="radio" name="rate" id="3" value="3">
+          <input type="radio" name="rate" id="3" value="3" aria-label="3">
           <label for="3" class="">3</label>
-          <input type="radio" name="rate" id="4" value="4">
+          <input type="radio" name="rate" id="4" value="4" aria-label="4">
           <label for="4" class="">4</label>
-          <input type="radio" name="rate" id="5" value="5">
+          <input type="radio" name="rate" id="5" value="5" aria-label="5">
           <label for="5" class="">5</label>
         </div>
         <div class="error">Please Rate Us</div>
@@ -56,7 +56,7 @@
     <!-- Thank you state start -->
   
     <div class="thankyou-card">
-        <img src="images/illustration-thank-you.svg" alt="" srcset="">
+        <img src="images/illustration-thank-you.svg" alt="Illustration of receipt printing" srcset="">
       <div>
         <h2>You selected <span id="ratNum"></span> out of 5</h2>
       </div>
