--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
         Please let us know how we did with your support request. All feedback is appreciated
         to help us improve our offering!
       </p>
-      <!-- <ul>
-        <li><button class="num-btn">1</button></li>
-        <li><button class="num-btn">2</button></li>
-        <li><button class="num-btn">3</button></li>
-        <li><button class="num-btn">4</button></li>
-        <li><button class="num-btn">5</button></li>
-      </ul>
-      <div class="error">Please Rate Us</div>
-      <button class="btn-submit">Submit</button> -->
       <form action="#">
         <div>
           <input type="radio" name="rate" id="1" value="1">
@@ -46,7 +37,7 @@
           <input type="radio" name="rate" id="5" value="5">
           <label for="5" class="">5</label>
         </div>
-        <div class="error">Please Rate Us</div>
+        <div class="error none">Please Rate Us</div>
         <button class="btn-submit">Submit</button>
       </form>
     </div>
@@ -55,7 +46,7 @@
   
     <!-- Thank you state start -->
   
-    <div class="thankyou-card">
+    <div class="thankyou-card none">
         <img src="images/illustration-thank-you.svg" alt="Illustration of receipt printing" srcset="">
       <div>
         <h2>You selected <span id="ratNum"></span> out of 5</h2>
